main algorithm cleanup