@@ -1,17 +1,17 @@
 package com.ndekefa.meetingp.service;
 
-import com.ndekefa.meetingp.data.dto.MeetingDTO;
+import com.ndekefa.meetingp.data.entity.RoomEntity;
 import com.ndekefa.meetingp.data.entity.ToolEntity;
 import com.ndekefa.meetingp.model.MeetingType;
 import com.ndekefa.meetingp.model.ToolType;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
 
 
 class ToolServiceTest {
@@ -26,36 +26,12 @@ class ToolServiceTest {
 
     @Test
     public void should_find_required_tools_by_meeting_type_rs() {
-        MeetingDTO meetingVC = MeetingDTO.builder().type(MeetingType.RS).build();
-        assertThat(toolService.findRequiredTools(meetingVC.getType())).isEmpty();
-    }
-
-    @Test
-    public void should_check_required_tools_rs() {
-        List<ToolEntity> roomTools = Collections.emptyList();
-        assertThat(toolService.hasRequiredTools(roomTools, MeetingType.RS)).isTrue();
-
-        roomTools = List.of(
-                new ToolEntity(ToolType.SCREEN),
-                new ToolEntity(ToolType.CONFERENCE_PHONE),
-                new ToolEntity(ToolType.WEBCAM));
-        assertThat(toolService.hasRequiredTools(roomTools, MeetingType.RS)).isTrue();
-    }
-
-    @Test
-    public void should_check_required_tools_rs_null() {
-        assertThatThrownBy(() -> toolService.hasRequiredTools(null, MeetingType.RS))
-                .isInstanceOf(NullPointerException.class);
-        assertThatThrownBy(() -> toolService.hasRequiredTools(Collections.emptyList(), null))
-                .isInstanceOf(NullPointerException.class);
+        assertThat(toolService.moveMissingTools(emptyRoom(), MeetingType.RS).getTools()).isEmpty();
     }
 
     @Test
     public void should_find_required_tools_by_meeting_type_vc() {
-        MeetingDTO meetingVC = MeetingDTO.builder().type(MeetingType.VC).build();
-        assertThat(meetingVC.getType()).isEqualTo(MeetingType.VC);
-
-        assertThat(toolService.findRequiredTools(meetingVC.getType()))
+        assertThat(toolService.moveMissingTools(emptyRoom(), MeetingType.VC).getTools())
                 .containsAll(List.of(
                         new ToolEntity(ToolType.SCREEN),
                         new ToolEntity(ToolType.CONFERENCE_PHONE),
@@ -63,41 +39,42 @@ class ToolServiceTest {
     }
 
     @Test
-    public void should_check_required_tools_vc_ok() {
-        List<ToolEntity> initialTools = List.of(new ToolEntity(ToolType.SCREEN), new ToolEntity(ToolType.WEBCAM), new ToolEntity((ToolType.CONFERENCE_PHONE)));
-        boolean hasRequiredTools = toolService.hasRequiredTools(initialTools, MeetingType.VC);
-        assertThat(hasRequiredTools).isTrue();
+    public void should_find_required_tools_by_meeting_type_spec() {
+        assertThat(toolService.moveMissingTools(emptyRoom(), MeetingType.SPEC).getTools())
+                .containsAll(List.of(
+                        new ToolEntity(ToolType.WHITEBOARD)));
     }
 
     @Test
-    public void should_check_required_tools_vc_ko() {
-        List<ToolEntity> initialTools = List.of(new ToolEntity(ToolType.SCREEN));
-        boolean hasRequiredTools = toolService.hasRequiredTools(initialTools, MeetingType.VC);
-        assertThat(hasRequiredTools).isFalse();
-    }
-
-    @Test
-    public void should_find_required_tools_completing_missing_tools_ok() {
-        List<ToolEntity> initialTools = List.of(new ToolEntity(ToolType.SCREEN));
-        List<ToolEntity> movableTools = toolService.getMovableTools();
-        long webCamCount = movableTools.stream().filter(toolEntity -> toolEntity.getType().equals(ToolType.WEBCAM)).count();
-        List<ToolEntity> expectedTools = List.of(
+    public void should_find_required_tools_by_meeting_type_rc() {
+        RoomEntity room = toolService.moveMissingTools(emptyRoom(), MeetingType.RC);
+        assertThat(room.getTools()).containsAll(List.of(
+                new ToolEntity(ToolType.WHITEBOARD),
                 new ToolEntity(ToolType.SCREEN),
-                new ToolEntity(ToolType.WEBCAM),
-                new ToolEntity(ToolType.CONFERENCE_PHONE));
-        List<ToolEntity> finalTools = toolService.findRequiredTools(initialTools, MeetingType.VC);
-        assertThat(finalTools).containsAll(expectedTools);
-
-        // check if missing tools are removed from movable tools
-        long webCamCount2 = movableTools.stream().filter(toolEntity -> toolEntity.getType().equals(ToolType.WEBCAM)).count();
-        assertThat(webCamCount2).isEqualTo(webCamCount - 1);
+                new ToolEntity(ToolType.CONFERENCE_PHONE)
+        ));
     }
 
     @Test
-    public void should_find_required_tools_completing_missing_tools_ko() {
-        List<ToolEntity> initialTools = List.of(new ToolEntity(ToolType.SCREEN));
-        toolService.setMovableTools(Collections.emptyList());
-        List<ToolEntity> finalTools = toolService.findRequiredTools(initialTools, MeetingType.VC);
-        assertThat(finalTools).doesNotContain(new ToolEntity(ToolType.WEBCAM), new ToolEntity(ToolType.CONFERENCE_PHONE));
+    public void should_remove_movable_tools() {
+        List<ToolEntity> movableTools = new ArrayList<>();
+        movableTools.add(new ToolEntity(ToolType.WHITEBOARD));
+        movableTools.add(new ToolEntity(ToolType.SCREEN));
+        movableTools.add(new ToolEntity(ToolType.SCREEN));
+        movableTools.add(new ToolEntity(ToolType.CONFERENCE_PHONE));
+        toolService.setMovableTools(movableTools);
+        RoomEntity roomWithWhiteboard = RoomEntity.builder()
+                .tools(List.of(new ToolEntity(ToolType.WHITEBOARD, false))).build();
+
+        toolService.moveMissingTools(roomWithWhiteboard, MeetingType.RC); // RC needs WB+SCREEN+C_PHONE
+
+        assertThat(toolService.getMovableTools()).containsExactlyInAnyOrder(
+                new ToolEntity(ToolType.WHITEBOARD),
+                new ToolEntity(ToolType.SCREEN)
+        );
+    }
+
+    private static RoomEntity emptyRoom() {
+        return RoomEntity.builder().tools(Collections.emptyList()).build();
     }
 }
